# helm-values-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  coverage.xml  plugin.yaml  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml  pull_request_template.md  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci-simple.yml.example  ci.yml  generate_docs.py  test.yml  update-docs.yml
docs/ADR/: 004-value-resolution-strategy.md
docs/ADRs/: 001-helm-values-manager.md  002-config-path-and-storage-design.md  003-unified-path-value-storage.md  005-unified-backend-approach.md  006-helm-style-logging.md  007-sensitive-value-storage.md  008-remove-command-registry.md  009-custom-configuration-file-paths.md  010-configuration-update-and-merge.md  011-command-structure-for-deployments.md  012-backend-specific-command-registration.md  README.md  adr-template.md
docs/Commands/: README.md
docs/Design/: architecture-overview.md  backends-and-auth.md  low-level-design.md  sequence-diagrams.md
docs/Development/: code-structure.md  standardize-terminology.md  tasks.md  testing.md
example/nginx/: .gitignore  README.md  common.yaml
guide/: idea phase2.md  prompt_plan.md  spec.md
helm_values_manager/: __init__.py  cli.py  errors.py  generator.py  models.py  utils.py  validator.py
helm_values_manager/backends/: __init__.py  base.py  plaintext.py  simple.py
helm_values_manager/commands/: __init__.py  add_deployment_command.py  add_value_config_command.py  base_command.py  generate.py  generate_command.py  init.py  init_command.py  registry.py  schema.py  set_value_command.py  validate.py  values.py
helm_values_manager/models/: __init__.py  config_metadata.py  constants.py  helm_values_config.py  path_data.py  value.py
helm_values_manager/schemas/: v1.json
helm_values_manager/utils/: __init__.py  logger.py
scripts/: install.sh  update.sh
tests/: __init__.py  test_edge_cases.py  test_generator.py  test_init.py  test_init_flags.py  test_integration.py  test_schema.py  test_utils.py  test_validate.py  test_values.py  test_values_init.py
tests/integration/: test_cli_integration.py
tests/unit/: __init__.py  test_cli.py
tests/unit/backends/: __init__.py  test_base.py  test_plaintext.py  test_simple.py
tests/unit/commands/: __init__.py  test_add_deployment_command.py  test_add_value_config_command.py  test_base_command.py  test_generate_command.py  test_init_command.py  test_registry.py  test_set_value_command.py
tests/unit/models/: test_helm_values_config.py  test_metadata.py  test_path_data.py  test_schema_validation.py  test_value.py
tests/unit/utils/: test_logger.py
tools/: test-plugin.sh
